Avoids content shift on RSS button

--- a/public/css/modules/footer.css
+++ b/public/css/modules/footer.css
@@ -19,6 +19,7 @@ footer {
 }
 
 .footer__rss-button__img {
+  min-width: 44px;
   width: calc(8 * var(--relative-eighth-rem));
 }
 
